--- a/admin.html
+++ b/admin.html
@@ -29,8 +29,8 @@
   <div id="login" class="card" style="display:none">
     <h1>管理员登录</h1>
     <div style="display:flex;gap:8px;flex-wrap:wrap">
-      <input id="u" placeholder="用户名（txtadmin）" />
-      <input id="p" type="password" placeholder="密码（202412）" />
+      <input id="u" placeholder="用户名" />
+      <input id="p" type="password" placeholder="密码" />
       <button class="btn" onclick="login()">登录</button>
     </div>
     <div id="msg" class="muted" style="margin-top:8px"></div>
@@ -50,40 +50,37 @@
 </div>
 
 <script>
-/* ============ 配置（务必改成你“最新部署”的 /exec 链接） ============ */
-const API_URL = 'https://script.google.com/macros/s/AKfycbxtv5e_Sk3vJpMhmAku9UP7tisdnsmN_zG00_8p7OTRqwfJ3ojS5E53AUAoPB3reToG/exec';
+/* ============ 配置 ============ */
+/** 用“同一个” Apps Script 的 /exec 地址（与前端 index 使用的保持一致）。 */
+const API_URL = 'https://script.google.com/macros/s/AKfycbzA_RVQlYKGuQCqBqA2X2gTBgSLENTwXWyQ60_6OdLi8TfFNHTDsTsyIE3TImxWtmFO/exec';
+// 可选：占位提示（真实用户名/密码在 Apps Script 的 Script Properties 里）
 const PLACEHOLDER_USER = 'txtadmin';
 const PLACEHOLDER_PASS = '202412';
+
+// 存 token 的 key
 const TOKEN_KEY = 'xanadu_admin_token';
 
 /* ============ 小工具 ============ */
-const vstr = x => (x==null ? '' : String(x));
-function escapeHTML(s){ return String(s==null?'':s).replace(/[&<>"']/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
-const getToken = () => sessionStorage.getItem(TOKEN_KEY) || '';
-const setToken = t => sessionStorage.setItem(TOKEN_KEY, t||'');
-const clearToken = () => sessionStorage.removeItem(TOKEN_KEY);
-
-/* ============ 健康检查（能最快定位“Failed to fetch”的根因） ============ */
-async function apiPing(){
-  try{
-    const r = await fetch(API_URL + '?pong=1&_=' + Date.now(), { method:'GET', cache:'no-store' });
-    const t = await r.text();
-    try{ return JSON.parse(t); }catch{ return { ok:false, error:'NOT_JSON', raw:t.slice(0,200) }; }
-  }catch(err){
-    return { ok:false, error:'FETCH_ERROR', raw:String(err) };
-  }
+function vstr(x){ return (x===undefined||x===null) ? '' : String(x); }
+function escapeHTML(s){
+  return String(s==null?'':s).replace(/[&<>"']/g, c=>({
+    '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'
+  }[c]));
 }
+function getToken(){ return sessionStorage.getItem(TOKEN_KEY) || ''; }
+function setToken(t){ sessionStorage.setItem(TOKEN_KEY, t||''); }
+function clearToken(){ sessionStorage.removeItem(TOKEN_KEY); }
 
-/* ============ API 封装 ============ */
+/* ============ API ============ */
 // 认证：POST {action:'auth', user, pass} => {ok:true, token}
 async function apiAuth(user, pass){
   const res = await fetch(API_URL, {
     method:'POST',
     headers:{ 'Content-Type':'text/plain;charset=utf-8' }, // 避免预检
-    body: JSON.stringify({ action:'auth', user, pass }),
-    cache:'no-store'
+    body: JSON.stringify({ action:'auth', user, pass })
   });
   const text = await res.text();
+  if(!res.ok) return { ok:false, error:`HTTP ${res.status}`, raw:text.slice(0,800) };
   try{ return JSON.parse(text); }
   catch{ return { ok:false, error:'NOT_JSON', raw:text.slice(0,800) }; }
 }
@@ -91,7 +88,7 @@ async function apiAuth(user, pass){
 // 列表：GET /exec?action=list&auth=TOKEN
 async function apiList(token){
   const url = `${API_URL}?action=list&auth=${encodeURIComponent(token)}&_=${Date.now()}`;
-  const res = await fetch(url, { method:'GET', cache:'no-store' });
+  const res = await fetch(url, { method:'GET' });
   const text = await res.text();
   if(!res.ok) return { ok:false, error:`HTTP ${res.status}`, raw:text.slice(0,800) };
   try{ return JSON.parse(text); }
@@ -103,10 +100,10 @@ async function apiDelete(ticket, token){
   const res = await fetch(API_URL, {
     method:'POST',
     headers:{ 'Content-Type':'text/plain;charset=utf-8' },
-    body: JSON.stringify({ action:'delete', ticket, auth:token }),
-    cache:'no-store'
+    body: JSON.stringify({ action:'delete', ticket, auth:token })
   });
   const text = await res.text();
+  if(!res.ok) return { ok:false, error:`HTTP ${res.status}`, raw:text.slice(0,800) };
   try{ return JSON.parse(text); }
   catch{ return { ok:false, error:'NOT_JSON', raw:text.slice(0,800) }; }
 }
@@ -123,7 +120,11 @@ async function login(){
       document.getElementById('msg').textContent = '授权失败：' + (j.error||'');
       return;
     }
-    setToken(j.token || '');
+    if(!j.token){
+      document.getElementById('msg').textContent = '授权失败：未返回 token';
+      return;
+    }
+    setToken(j.token);
     document.getElementById('login').style.display='none';
     document.getElementById('panel').style.display='block';
     loadList();
@@ -154,9 +155,10 @@ async function loadList(){
   try{
     const j = await apiList(token);
     if(!j.ok){
-      if(String(j.error||'').includes('AUTH')){
+      if(j.error && String(j.error).includes('AUTH')){
         box.innerHTML = '<div class="card">口令无效或已过期，请重新登录。</div>';
-        logout(); return;
+        logout();
+        return;
       }
       box.innerHTML = `
         <div class="card">
@@ -168,7 +170,7 @@ async function loadList(){
 
     const list = Array.isArray(j.data) ? j.data : [];
 
-    // 疑重（同名 + 同微信/邮箱）
+    // 疑重：同姓名 +（同微信 或 同邮箱）
     const seen = new Map();
     for(const r of list){
       const k1 = `${vstr(r.name).trim()}|${vstr(r.wechat).trim()}`;
@@ -217,12 +219,7 @@ async function loadList(){
 
     box.innerHTML = html || '<div class="card">暂无记录</div>';
   }catch(err){
-    // 只有真正网络层失败才会进这里（比如 /exec 链接错误、未公开、被跳转拦截）
-    // 顺手做个 ping，给出更明确的提示
-    const ping = await apiPing();
-    const more = ping.ok ? '' : `\n[健康检查] ${ping.error}${ping.raw ? ' - ' + ping.raw : ''}`;
-    document.getElementById('list').innerHTML =
-      `<div class="card err">网络异常或接口错误：\n${escapeHTML(String(err))}${escapeHTML(more)}</div>`;
+    box.innerHTML = `<div class="card err">网络异常或接口错误：\n${escapeHTML(String(err))}</div>`;
   }
 }
 
@@ -238,8 +235,9 @@ async function confirmDelete(ticket){
   try{
     const j = await apiDelete(ticket, token);
     if(!j.ok){
-      if(String(j.error||'').includes('AUTH')){ alert('口令无效或已过期，请重新登录。'); logout(); return; }
-      alert('删除失败：' + (j.error||'')); return;
+      if(j.error && String(j.error).includes('AUTH')){ alert('口令无效或已过期，请重新登录。'); logout(); return; }
+      alert('删除失败：' + (j.error||''));
+      return;
     }
     loadList();
   }catch(err){
@@ -248,21 +246,11 @@ async function confirmDelete(ticket){
 }
 
 /* ============ 初始化 ============ */
-(async function init(){
+(function init(){
   document.getElementById('u').placeholder = `用户名（${PLACEHOLDER_USER}）`;
   document.getElementById('p').placeholder = `密码（${PLACEHOLDER_PASS}）`;
 
-  // 先做一次 ping，能提前发现“Failed to fetch”的根因
-  const ping = await apiPing();
-  if(!ping.ok){
-    document.getElementById('login').style.display='block';
-    document.getElementById('msg').innerHTML =
-      '无法访问 Apps Script 接口：<br>' +
-      '<div class="err">' + escapeHTML(ping.error + (ping.raw?(' - '+ping.raw):'')) + '</div>' +
-      '<div class="muted" style="margin-top:6px">请检查：1) API_URL 是否为最新部署的 /exec；2) 部署访问权限是否选 “Anyone”；3) 重新部署后是否复制了新的 URL。</div>';
-    return;
-  }
-
+  // 有 token 直接进面板
   if(getToken()){
     document.getElementById('panel').style.display='block';
     loadList();
