--- a/admin.html
+++ b/admin.html
@@ -64,7 +64,7 @@
 
 <script>
 /* ========= 需要你替换的唯一一项：当前部署的 script.google.com ... /exec ========= */
-const EXEC_URL = 'https://script.google.com/macros/s/AKfycbyNEHI9QrH7OFkHMNRf3TqYsqRMtieq6Lj6HTdrGsrd6gpAzFih158XWy5BIh6RKpYZ/exec';
+const EXEC_URL = 'https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLjTW9zv7DdPkgQFPWc6E3YLoNFDbR5FJoh-osn8Fw_bpzKdKj7FL5hNZRnbsqDeP81_4aJI_QfuePq7rjbthDvb1sqaX6nAxYtAB_l7_leHZDT4fpggkEB_kJApvhDYCvyOsgXBsfaLCEeGqe7I5eDOsvb-g_99oQ6FQdX-64IxCjXJixc2ylR9tQ-7Vd3fRmR1KYQRPjHC4CdzopzcMLp1igvGWj6joffeJ3g9esv03rTlUwyStYjGe2c678CL9DKSljh_NUTkUH7K9Pvqf3DOjcJH0lw36c385trc3Q4pC1akbpk&lib=MYRhpJzSQwW76hmLS9jV-zQrvHWfkxrme/exec';
 
 /* ========= 常量 ========= */
 const LS_TOKEN = 'xanadu_admin_token';
